# gdt-fermi

./: .gitignore  .readthedocs.yaml  Manifest.in  NOTICE  PYPI-README.rst  README.rst  pyproject.toml  release-notes.md  requirements.txt  setup.py
docs/: conf.py  index.rst  install.rst  notebooks.rst  requirements.txt
docs/_build/html/: index.html
docs/missions/fermi/: frame.rst  mcilwainl.rst  plot.rst  time.rst
docs/missions/fermi/gbm/: catalogs.rst  collection.rst  detectors.rst  finders.rst  headers.rst  localization.rst  phaii.rst  poshist.rst  response.rst  saa.rst  scat.rst  tcat.rst  trigdat.rst  trigger.rst  tte.rst
docs/notebooks/: Fermi_GBM_Classification_Tutorial.ipynb.tar  Fermi_GBM_Detector_Responses_Tutorial.ipynb.tar  Fermi_GBM_Localizations_and_Skymaps_Tutorial.ipynb.tar  Fermi_GBM_PHAII_Data_Tutorial.ipynb.tar  Fermi_GBM_Position_History_Data_Tutorial.ipynb.tar  Fermi_GBM_Spectral_Catalog_Data_Tutorial.ipynb.tar  Fermi_GBM_TTE_Data_Tutorial.ipynb.tar  Fermi_GBM_Trigger_Data_Tutorial.ipynb.tar  Fermi_GBM_Trigger_Method_Tutorial.ipynb.tar  Finding_GBM_Data_Tutorial.ipynb.tar  Reduction_And_Export_Tutorial.ipynb.tar  Spectral_Analysis_Tutorial.ipynb.tar
notebooks/: Data_Primitives_Tutorial.ipynb  Fermi_GBM_Detector_Responses_Tutorial.ipynb  Fermi_GBM_Localizations_and_Skymaps_Tutorial.ipynb  Fermi_GBM_PHAII_Data_Tutorial.ipynb  Fermi_GBM_Position_History_Data_Tutorial.ipynb  Fermi_GBM_Spectral_Catalog_Data_Tutorial.ipynb  Fermi_GBM_TTE_Data_Tutorial.ipynb  Fermi_GBM_Trigger_Data_Tutorial.ipynb  Finding_GBM_Data_Tutorial.ipynb  Reduction_And_Export_Tutorial.ipynb  Spectral_Analysis_Tutorial.ipynb
scripts/: dol_source_angles.py
src/gdt/data/: fermi-gbm.urls
src/gdt/missions/fermi/: __init__.py  frame.py  mcilwainl.py  plot.py  time.py
tests/: test_files.urls
tests/missions/fermi/: test_mcilwainl.py  test_plot.py  test_time.py
tests/missions/fermi/data/: trigger_data.csv
tests/missions/fermi/gbm/: test_catalogs.py  test_classification.py  test_collection.py  test_detectors.py  test_finders.py  test_headers.py  test_localization.py  test_phaii.py  test_poshist.py  test_response.py  test_saa.py  test_scat.py  test_tcat.py  test_trigdat.py  (+2 more)
(+58 files in other folders)
